TP3/obj/scanner.output
Nonterminals useless in grammar

    listaDeclaracion


Terminals unused in grammar

    CARACTERDEPUNTUACION
    SIGNED
    UNSIGNED
    SWITCH
    CASE
    DEFAULT
    PALABRARESERVADA
    COMENTARIO
    '^'


Rules useless in grammar

  118 listaDeclaracion: %empty
  119                 | declaracion ';' listaDeclaracion


Rules useless in parser due to conflicts

   17 listaDeclaraciones: listaDeclaraciones declaracion

   55 tipoDeRetorno: CHAR
   56              | DOUBLE
   57              | FLOAT
   58              | INT
   59              | SHORT

   73 expOr: expOr OR expAnd


State 3 conflicts: 1 shift/reduce
State 10 conflicts: 1 reduce/reduce
State 11 conflicts: 1 reduce/reduce
State 12 conflicts: 1 reduce/reduce
State 13 conflicts: 1 reduce/reduce
State 15 conflicts: 1 reduce/reduce
State 31 conflicts: 34 reduce/reduce
State 32 conflicts: 7 shift/reduce
State 37 conflicts: 1 shift/reduce
State 74 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 82 conflicts: 33 shift/reduce
State 86 conflicts: 1 reduce/reduce
State 87 conflicts: 1 reduce/reduce
State 114 conflicts: 2 shift/reduce
State 126 conflicts: 34 reduce/reduce
State 136 conflicts: 7 reduce/reduce
State 162 conflicts: 1 shift/reduce
State 167 conflicts: 1 reduce/reduce
State 174 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | sentencia '\n'
    5     | sentencia

    6 sentencia: sentCompuesta
    7          | sentExpresion
    8          | sentSeleccion
    9          | sentIteracion
   10          | sentSalto
   11          | declaracion
   12          | '\n'
   13          | definicionFuncion
   14          | error

   15 sentCompuesta: '{' listaDeclaraciones listaSentencias '}'

   16 listaDeclaraciones: declaracion
   17                   | listaDeclaraciones declaracion
   18                   | %empty

   19 listaSentencias: sentencia
   20                | listaSentencias sentencia
   21                | %empty

   22 sentExpresion: expresion ';'

   23 sentSeleccion: IF '(' expresion ')' sentencia
   24              | IF '(' expresion ')' sentencia ELSE sentencia

   25 sentIteracion: WHILE '(' expresion ')' sentencia
   26              | DO sentencia WHILE '(' expresion ')' ';'
   27              | FOR '(' expresion ';' expresion ';' expresion ')'

   28 sentSalto: CONTINUE ';'
   29          | BREAK ';'
   30          | RETURN expresion ';'
   31          | GOTO IDENTIFICADOR ';'

   32 declaracion: declaracionVarSimples

   33 declaracionVarSimples: tipoDeDato listaVarSimples ';'
   34                      | tipoDeDato IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta
   35                      | error caracterDeCorte

   36 tipoDeDato: CHAR
   37           | DOUBLE
   38           | FLOAT
   39           | INT
   40           | LONG
   41           | SHORT

   42 listaVarSimples: unaVarSimple
   43                | unaVarSimple ',' listaVarSimples
   44                | error

   45 $@1: %empty

   46 unaVarSimple: IDENTIFICADOR $@1 ',' unaVarSimple
   47             | IDENTIFICADOR
   48             | IDENTIFICADOR '=' expresion
   49             | error

   50 definicionFuncion: tipoDeRetorno IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta

   51 lista_argumentos: argumento ',' lista_argumentos
   52                 | argumento
   53                 | %empty

   54 argumento: tipoDeDato IDENTIFICADOR

   55 tipoDeRetorno: CHAR
   56              | DOUBLE
   57              | FLOAT
   58              | INT
   59              | SHORT
   60              | VOID

   61 expresion: expAsignacion
   62          | expresion ',' expAsignacion

   63 expAsignacion: expCondicional
   64              | expUnaria operAsignacion expAsignacion

   65 operAsignacion: '='
   66               | MAS_IGUAL
   67               | MENOS_IGUAL
   68               | POR_IGUAL

   69 expCondicional: expOr
   70               | expOr OR expCondicional
   71               | expOr '?' expresion ':' expCondicional

   72 expOr: expAnd
   73      | expOr OR expAnd

   74 expAnd: expIgualdad
   75       | expAnd AND expIgualdad

   76 expIgualdad: expRelacional
   77            | expIgualdad IGUALDAD expRelacional
   78            | expIgualdad DESIGUALDAD expRelacional

   79 expRelacional: expAditiva
   80              | expRelacional '<' expAditiva
   81              | expRelacional MENORIGUAL expAditiva
   82              | expRelacional '>' expAditiva
   83              | expRelacional MAYORIGUAL expAditiva

   84 expAditiva: expMultiplicativa
   85           | expAditiva '+' expMultiplicativa
   86           | expAditiva '-' expMultiplicativa

   87 expMultiplicativa: expUnaria
   88                  | expMultiplicativa '*' expUnaria
   89                  | expMultiplicativa '/' expUnaria
   90                  | expMultiplicativa '%' expUnaria

   91 expUnaria: expPostfijo
   92          | MAS_MAS expUnaria
   93          | MENOS_MENOS expUnaria
   94          | expUnaria MAS_MAS
   95          | expUnaria MENOS_MENOS
   96          | operUnario expUnaria
   97          | SIZEOF '(' tipoDeDato ')'

   98 operUnario: '&'
   99           | '*'
  100           | '-'
  101           | '!'

  102 expPostfijo: expPrimaria
  103            | expPostfijo '[' expresion ']'
  104            | expPostfijo '(' listaArgumentos ')'

  105 listaArgumentos: expAsignacion
  106                | listaArgumentos ',' expAsignacion
  107                | %empty

  108 expPrimaria: IDENTIFICADOR
  109            | CONST_DEC
  110            | CONST_OCT
  111            | CONST_HEX
  112            | CONST_REAL
  113            | CONST_CARACTER
  114            | LITERAL_CADENA
  115            | '(' expresion ')'

  116 caracterDeCorte: ';'
  117                | '\n'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 12 117
    '!' (33) 101
    '%' (37) 90
    '&' (38) 98
    '(' (40) 23 24 25 26 27 34 50 97 104 115
    ')' (41) 23 24 25 26 27 34 50 97 104 115
    '*' (42) 88 99
    '+' (43) 85
    ',' (44) 43 46 51 62 106
    '-' (45) 86 100
    '/' (47) 89
    ':' (58) 71
    ';' (59) 22 26 27 28 29 30 31 33 116
    '<' (60) 80
    '=' (61) 48 65
    '>' (62) 82
    '?' (63) 71
    '[' (91) 103
    ']' (93) 103
    '^' (94)
    '{' (123) 15
    '}' (125) 15
    error (256) 14 35 44 49
    LITERAL_CADENA <valor> (258) 114
    CONST_CARACTER <valor> (259) 113
    CONST_REAL <valor> (260) 112
    CONST_HEX <valor> (261) 111
    CONST_OCT <valor> (262) 110
    CONST_DEC <valor> (263) 109
    CARACTERDEPUNTUACION (264)
    CHAR (265) 36 55
    DOUBLE (266) 37 56
    FLOAT (267) 38 57
    INT (268) 39 58
    LONG (269) 40
    SHORT (270) 41 59
    VOID (271) 60
    SIGNED (272)
    UNSIGNED (273)
    IF (274) 23 24
    ELSE (275) 24
    WHILE (276) 25 26
    DO (277) 26
    SWITCH (278)
    FOR (279) 27
    CASE (280)
    DEFAULT (281)
    PALABRARESERVADA (282)
    BREAK (283) 29
    RETURN (284) 30
    GOTO (285) 31
    CONTINUE (286) 28
    COMENTARIO (287)
    IDENTIFICADOR <valor> (288) 31 34 46 47 48 50 54 108
    SIZEOF (289) 97
    MENOS_MENOS (290) 93 95
    MAS_MAS (291) 92 94
    MAS_IGUAL (292) 66
    MENOS_IGUAL (293) 67
    POR_IGUAL (294) 68
    OR (295) 70 73
    AND (296) 75
    MAYORIGUAL (297) 83
    MENORIGUAL (298) 81
    DESIGUALDAD (299) 78
    IGUALDAD (300) 77


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    input (69)
        on left: 1 2
        on right: 0 2
    line (70)
        on left: 3 4 5
        on right: 2
    sentencia (71)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 4 5 19 20 23 24 25 26
    sentCompuesta (72)
        on left: 15
        on right: 6 34 50
    listaDeclaraciones (73)
        on left: 16 17 18
        on right: 15 17
    listaSentencias (74)
        on left: 19 20 21
        on right: 15 20
    sentExpresion (75)
        on left: 22
        on right: 7
    sentSeleccion (76)
        on left: 23 24
        on right: 8
    sentIteracion (77)
        on left: 25 26 27
        on right: 9
    sentSalto (78)
        on left: 28 29 30 31
        on right: 10
    declaracion (79)
        on left: 32
        on right: 11 16 17
    declaracionVarSimples (80)
        on left: 33 34 35
        on right: 32
    tipoDeDato (81)
        on left: 36 37 38 39 40 41
        on right: 33 34 54 97
    listaVarSimples (82)
        on left: 42 43 44
        on right: 33 43
    unaVarSimple (83)
        on left: 46 47 48 49
        on right: 42 43 46
    $@1 (84)
        on left: 45
        on right: 46
    definicionFuncion (85)
        on left: 50
        on right: 13
    lista_argumentos (86)
        on left: 51 52 53
        on right: 34 50 51
    argumento (87)
        on left: 54
        on right: 51 52
    tipoDeRetorno (88)
        on left: 55 56 57 58 59 60
        on right: 50
    expresion (89)
        on left: 61 62
        on right: 22 23 24 25 26 27 30 48 62 71 103 115
    expAsignacion (90)
        on left: 63 64
        on right: 61 62 64 105 106
    operAsignacion (91)
        on left: 65 66 67 68
        on right: 64
    expCondicional (92)
        on left: 69 70 71
        on right: 63 70 71
    expOr (93)
        on left: 72 73
        on right: 69 70 71 73
    expAnd (94)
        on left: 74 75
        on right: 72 73 75
    expIgualdad (95)
        on left: 76 77 78
        on right: 74 75 77 78
    expRelacional (96)
        on left: 79 80 81 82 83
        on right: 76 77 78 80 81 82 83
    expAditiva (97)
        on left: 84 85 86
        on right: 79 80 81 82 83 85 86
    expMultiplicativa (98)
        on left: 87 88 89 90
        on right: 84 85 86 88 89 90
    expUnaria (99)
        on left: 91 92 93 94 95 96 97
        on right: 64 87 88 89 90 92 93 94 95 96
    operUnario (100)
        on left: 98 99 100 101
        on right: 96
    expPostfijo (101)
        on left: 102 103 104
        on right: 91 103 104
    listaArgumentos (102)
        on left: 105 106 107
        on right: 104 106
    expPrimaria (103)
        on left: 108 109 110 111 112 113 114 115
        on right: 102
    caracterDeCorte (104)
        on left: 116 117
        on right: 35


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input line

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line
    3 line: . '\n'
    4     | . sentencia '\n'
    5     | . sentencia
    6 sentencia: . sentCompuesta
    7          | . sentExpresion
    8          | . sentSeleccion
    9          | . sentIteracion
   10          | . sentSalto
   11          | . declaracion
   12          | . '\n'
   13          | . definicionFuncion
   14          | . error
   15 sentCompuesta: . '{' listaDeclaraciones listaSentencias '}'
   22 sentExpresion: . expresion ';'
   23 sentSeleccion: . IF '(' expresion ')' sentencia
   24              | . IF '(' expresion ')' sentencia ELSE sentencia
   25 sentIteracion: . WHILE '(' expresion ')' sentencia
   26              | . DO sentencia WHILE '(' expresion ')' ';'
   27              | . FOR '(' expresion ';' expresion ';' expresion ')'
   28 sentSalto: . CONTINUE ';'
   29          | . BREAK ';'
   30          | . RETURN expresion ';'
   31          | . GOTO IDENTIFICADOR ';'
   32 declaracion: . declaracionVarSimples
   33 declaracionVarSimples: . tipoDeDato listaVarSimples ';'
   34                      | . tipoDeDato IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta
   35                      | . error caracterDeCorte
   36 tipoDeDato: . CHAR
   37           | . DOUBLE
   38           | . FLOAT
   39           | . INT
   40           | . LONG
   41           | . SHORT
   50 definicionFuncion: . tipoDeRetorno IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta
   55 tipoDeRetorno: . CHAR
   56              | . DOUBLE
   57              | . FLOAT
   58              | . INT
   59              | . SHORT
   60              | . VOID
   61 expresion: . expAsignacion
   62          | . expresion ',' expAsignacion
   63 expAsignacion: . expCondicional
   64              | . expUnaria operAsignacion expAsignacion
   69 expCondicional: . expOr
   70               | . expOr OR expCondicional
   71               | . expOr '?' expresion ':' expCondicional
   72 expOr: . expAnd
   73      | . expOr OR expAnd
   74 expAnd: . expIgualdad
   75       | . expAnd AND expIgualdad
   76 expIgualdad: . expRelacional
   77            | . expIgualdad IGUALDAD expRelacional
   78            | . expIgualdad DESIGUALDAD expRelacional
   79 expRelacional: . expAditiva
   80              | . expRelacional '<' expAditiva
   81              | . expRelacional MENORIGUAL expAditiva
   82              | . expRelacional '>' expAditiva
   83              | . expRelacional MAYORIGUAL expAditiva
   84 expAditiva: . expMultiplicativa
   85           | . expAditiva '+' expMultiplicativa
   86           | . expAditiva '-' expMultiplicativa
   87 expMultiplicativa: . expUnaria
   88                  | . expMultiplicativa '*' expUnaria
   89                  | . expMultiplicativa '/' expUnaria
   90                  | . expMultiplicativa '%' expUnaria
   91 expUnaria: . expPostfijo
   92          | . MAS_MAS expUnaria
   93          | . MENOS_MENOS expUnaria
   94          | . expUnaria MAS_MAS
   95          | . expUnaria MENOS_MENOS
   96          | . operUnario expUnaria
   97          | . SIZEOF '(' tipoDeDato ')'
   98 operUnario: . '&'
   99           | . '*'
  100           | . '-'
  101           | . '!'
  102 expPostfijo: . expPrimaria
  103            | . expPostfijo '[' expresion ']'
  104            | . expPostfijo '(' listaArgumentos ')'
  108 expPrimaria: . IDENTIFICADOR
  109            | . CONST_DEC
  110            | . CONST_OCT
  111            | . CONST_HEX
  112            | . CONST_REAL
  113            | . CONST_CARACTER
  114            | . LITERAL_CADENA
  115            | . '(' expresion ')'

    $end            shift, and go to state 2
    error           shift, and go to state 3
    LITERAL_CADENA  shift, and go to state 4
    CONST_CARACTER  shift, and go to state 5
    CONST_REAL      shift, and go to state 6
    CONST_HEX       shift, and go to state 7
    CONST_OCT       shift, and go to state 8
    CONST_DEC       shift, and go to state 9
    CHAR            shift, and go to state 10
    DOUBLE          shift, and go to state 11
    FLOAT           shift, and go to state 12
    INT             shift, and go to state 13
    LONG            shift, and go to state 14
    SHORT           shift, and go to state 15
    VOID            shift, and go to state 16
    IF              shift, and go to state 17
    WHILE           shift, and go to state 18
    DO              shift, and go to state 19
    FOR             shift, and go to state 20
    BREAK           shift, and go to state 21
    RETURN          shift, and go to state 22
    GOTO            shift, and go to state 23
    CONTINUE        shift, and go to state 24
    IDENTIFICADOR   shift, and go to state 25
    SIZEOF          shift, and go to state 26
    MENOS_MENOS     shift, and go to state 27
    MAS_MAS         shift, and go to state 28
    '-'             shift, and go to state 29
    '*'             shift, and go to state 30
    '\n'            shift, and go to state 31
    '{'             shift, and go to state 32
    '('             shift, and go to state 33
    '&'             shift, and go to state 34
    '!'             shift, and go to state 35

    line                   go to state 36
    sentencia              go to state 37
    sentCompuesta          go to state 38
    sentExpresion          go to state 39
    sentSeleccion          go to state 40
    sentIteracion          go to state 41
    sentSalto              go to state 42
    declaracion            go to state 43
    declaracionVarSimples  go to state 44
    tipoDeDato             go to state 45
    definicionFuncion      go to state 46
    tipoDeRetorno          go to state 47
    expresion              go to state 48
    expAsignacion          go to state 49
    expCondicional         go to state 50
    expOr                  go to state 51
    expAnd                 go to state 52
    expIgualdad            go to state 53
    expRelacional          go to state 54
    expAditiva             go to state 55
    expMultiplicativa      go to state 56
    expUnaria              go to state 57
    operUnario             go to state 58
    expPostfijo            go to state 59
    expPrimaria            go to state 60


State 2

    0 $accept: input $end .

    $default  accept


State 3

   14 sentencia: error .  [$end, error, LITERAL_CADENA, CONST_CARACTER, CONST_REAL, CONST_HEX, CONST_OCT, CONST_DEC, CHAR, DOUBLE, FLOAT, INT, LONG, SHORT, VOID, IF, ELSE, WHILE, DO, FOR, BREAK, RETURN, GOTO, CONTINUE, IDENTIFICADOR, SIZEOF, MENOS_MENOS, MAS_MAS, '-', '*', '\n', '{', '}', '(', '&', '!']
   35 declaracionVarSimples: error . caracterDeCorte
  116 caracterDeCorte: . ';'
  117                | . '\n'

    '\n'  shift, and go to state 61
    ';'   shift, and go to state 62

    '\n'      [reduce using rule 14 (sentencia)]
    $default  reduce using rule 14 (sentencia)

    caracterDeCorte  go to state 63


State 4

  114 expPrimaria: LITERAL_CADENA .

    $default  reduce using rule 114 (expPrimaria)


State 5

  113 expPrimaria: CONST_CARACTER .

    $default  reduce using rule 113 (expPrimaria)


State 6

  112 expPrimaria: CONST_REAL .

    $default  reduce using rule 112 (expPrimaria)


State 7

  111 expPrimaria: CONST_HEX .

    $default  reduce using rule 111 (expPrimaria)


State 8

  110 expPrimaria: CONST_OCT .

    $default  reduce using rule 110 (expPrimaria)


State 9

  109 expPrimaria: CONST_DEC .

    $default  reduce using rule 109 (expPrimaria)


State 10

   36 tipoDeDato: CHAR .  [error, IDENTIFICADOR]
   55 tipoDeRetorno: CHAR .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 36 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 55 (tipoDeRetorno)]
    $default       reduce using rule 36 (tipoDeDato)


State 11

   37 tipoDeDato: DOUBLE .  [error, IDENTIFICADOR]
   56 tipoDeRetorno: DOUBLE .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 37 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 56 (tipoDeRetorno)]
    $default       reduce using rule 37 (tipoDeDato)


State 12

   38 tipoDeDato: FLOAT .  [error, IDENTIFICADOR]
   57 tipoDeRetorno: FLOAT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 38 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 57 (tipoDeRetorno)]
    $default       reduce using rule 38 (tipoDeDato)


State 13

   39 tipoDeDato: INT .  [error, IDENTIFICADOR]
   58 tipoDeRetorno: INT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 39 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 58 (tipoDeRetorno)]
    $default       reduce using rule 39 (tipoDeDato)


State 14

   40 tipoDeDato: LONG .

    $default  reduce using rule 40 (tipoDeDato)


State 15

   41 tipoDeDato: SHORT .  [error, IDENTIFICADOR]
   59 tipoDeRetorno: SHORT .  [IDENTIFICADOR]

    IDENTIFICADOR  reduce using rule 41 (tipoDeDato)
    IDENTIFICADOR  [reduce using rule 59 (tipoDeRetorno)]
    $default       reduce using rule 41 (tipoDeDato)


State 16

   60 tipoDeRetorno: VOID .

    $default  reduce using rule 60 (tipoDeRetorno)


State 17

   23 sentSeleccion: IF . '(' expresion ')' sentencia
   24              | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  shift, and go to state 64


State 18

   25 sentIteracion: WHILE . '(' expresion ')' sentencia

    '('  shift, and go to state 65


State 19

    6 sentencia: . sentCompuesta
    7          | . sentExpresion
    8          | . sentSeleccion
    9          | . sentIteracion
   10          | . sentSalto
   11          | . declaracion
   12          | . '\n'
   13          | . definicionFuncion
   14          | . error
   15 sentCompuesta: . '{' listaDeclaraciones listaSentencias '}'
   22 sentExpresion: . expresion ';'
   23 sentSeleccion: . IF '(' expresion ')' sentencia
   24              | . IF '(' expresion ')' sentencia ELSE sentencia
   25 sentIteracion: . WHILE '(' expresion ')' sentencia
   26              | . DO sentencia WHILE '(' expresion ')' ';'
   26              | DO . sentencia WHILE '(' expresion ')' ';'
   27              | . FOR '(' expresion ';' expresion ';' expresion ')'
   28 sentSalto: . CONTINUE ';'
   29          | . BREAK ';'
   30          | . RETURN expresion ';'
   31          | . GOTO IDENTIFICADOR ';'
   32 declaracion: . declaracionVarSimples
   33 declaracionVarSimples: . tipoDeDato listaVarSimples ';'
   34                      | . tipoDeDato IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta
   35                      | . error caracterDeCorte
   36 tipoDeDato: . CHAR
   37           | . DOUBLE
   38           | . FLOAT
   39           | . INT
   40           | . LONG
   41           | . SHORT
   50 definicionFuncion: . tipoDeRetorno IDENTIFICADOR '(' lista_argumentos ')' sentCompuesta
   55 tipoDeRetorno: . CHAR
   56              | . DOUBLE
   57              | . FLOAT
   58              | . INT
   59              | . SHORT
   60              | . VOID
   61 expresion: . expAsignacion
   62          | . expresion ',' expAsignacion
   63 expAsignacion: . expCondicional
   64              | . expUnaria operAsignacion expAsignacion
   69 expCondicional: . expOr
   70               | . expOr OR expCondicional
   71               | . expOr '?' expresion ':' expCondicional
   72 expOr: . expAnd
   73      | . expOr OR expAnd
   74 expAnd: . expIgualdad
   75       | . expAnd AND expIgualdad
   76 expIgualdad: . expRelacional
   77            | . expIgualdad IGUALDAD expRelacional
   78            | . expIgualdad DESIGUALDAD expRelacional
   79 expRelacional: . expAditiva
   80              | . expRelacional '<' expAditiva
   81              | . expRelacional MENORIGUAL expAditiva
   82              | . expRelacional '>' expAditiva
   83              | . expRelacional MAYORIGUAL expAditiva
   84 expAditiva: . expMultiplicativa
   85           | . expAditiva '+' expMultiplicativa
   86           | . expAditiva '-' expMultiplicativa
   87 expMultiplicativa: . expUnaria
   88                  | . expMultiplicativa '*' expUnaria
   89                  | . expMultiplicativa '/' expUnaria
   90                  | . expMultiplicativa '%' expUnaria
   91 expUnaria: . expPostfijo
   92          | . MAS_MAS expUnaria
   93          | . MENOS_MENOS expUnaria
   94          | . expUnaria MAS_MAS
   95          | . expUnaria MENOS_MENOS
   96          | . operUnario expUnaria
   97          | . SIZEOF '(' tipoDeDato ')'
   98 operUnario: . '&'
   99           | . '*'
  100           | . '-'
  101           | . '!'
  102 expPostfijo: . expPrimaria
  103            | . expPostfijo '[' expresion ']'
  104            | . expPostfijo '(' listaArgumentos ')'
  108 expPrimaria: . IDENTIFICADOR
  109            | . CONST_DEC
  110            | . CONST_OCT
  111            | . CONST_HEX
  112            | . CONST_REAL
  113            | . CONST_CARACTER
  114            | . LITERAL_CADENA
  115            | . '(' expresion ')'

    error           shift, and go to state 3
    LITERAL_CADENA  shift, and go to state 4
    CONST_CARACTER  shift, and go to state 5
    CONST_REAL      shift, and go to state 6
    CONST_HEX       shift, and go to state 7
    CONST_OCT       shift, and go to state 8
    CONST_DEC       shift, and go to state 9
    CHAR            shift, and go to state 10
    DOUBLE          shift, and go to state 11
    FLOAT           shift, and go to state 12
    INT             shift, and go to state 13
    LONG            shift, and go to state 14
    SHORT           shift, and go to state 15
    VOID            shift, and go to state 16
    IF              shift, and go to state 17
    WHILE           shift, and go to state 18
    DO              shift, and go to state 19
    FOR             shift, and go to state 20
    BREAK           shift, and go to state 21
    RETURN          shift, and go to state 22
    GOTO            shift, and go to state 23
    CONTINUE        shift, and go to state 24
    IDENTIFICADOR   shift, and go to state 25
    SIZEOF          shift, and go to state 26
    MENOS_MENOS     shift, and go to state 27
    MAS_MAS         shift, and go to state 28
    '-'             shift, and go to state 29
    '*'             shift, and go to state 30
    '\n'            shift, and go to state 66
    '{'             shift, and go to state 32
    '('             shift, and go to state 33
    '&'             shift, and go to state 34
    '!'             shift, and go to state 35

    sentencia              go to state 67
    sentCompuesta          go to state 38
    sentExpresion          go to state 39
    sentSeleccion          go to state 40
    sentIteracion          go to state 41
    sentSalto              go to state 42
    declaracion            go to state 43
    declaracionVarSimples  go to state 44
    tipoDeDato             go to state 45
    definicionFuncion      go to state 46
    tipoDeRetorno          go to state 47
    expresion              go to state 48
    expAsignacion          go to state 49
    expCondicional         go to state 50
    expOr                  go to state 51
    expAnd                 go to state 52
    expIgualdad            go to state 53
    expRelacional          go to state 54
    expAditiva             go to state 55
    expMultiplicativa      go to state 56
    expUnaria              go to state 57
    operUnario             go to state 58
    expPostfijo            go to state 59
    expPrimaria            go to state 60


State 20

   27 sentIteracion: FOR . '(' expresion ';' expresion ';' expresion ')'

    '('  shift, and go to state 68


State 21

   29 sentSalto: BREAK . ';'

    ';'  shift, and go to state 69
